# zed-base64

./: Cargo.toml  README.md  extension.toml
src/: lib.rs
